# beastmine_launcher

./: README.md  install-mingw.bat  install-mingw.ps1  setup-mingw.bat  setup-windows.ps1
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: GameCard.tsx  Header.tsx  Loading.tsx  NewsSection.tsx  Sidebar.tsx  SystemStats.tsx  TitleBar.tsx
frontend/src/pages/: Builds.tsx  Launcher.tsx  Login.tsx  Profile.tsx  Settings.tsx
frontend/src/store/: useStore.ts
frontend/src/styles/: globals.css
frontend/src/utils/: api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  models.rs
src-tauri/src/services/: auth.rs  game.rs  mod.rs  modpack.rs  news.rs  notification.rs  privilege.rs  skin.rs  system.rs  update.rs
src-tauri/src/utils/: errors.rs  mod.rs
